# sdk

./: README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml
fintz/: __init__.py  _base.py  _bolsa.py  _tesouro.py
notebooks/: examples.ipynb
