[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fintz"
version = "0.0.1"
authors = [
  { name="João Vicente Meyer", email="1994meyer@gmail.com" },
]
description = "Python client to interact with Fintz API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://fintz.com.br/"
"Bug Tracker" = "https://github.com/thefintz/sdk/issues"
